--- a/css/formacao.css
+++ b/css/formacao.css
@@ -25,7 +25,7 @@
 }
 
 .formacao .subtitulo {
-  color: #000000;
+  color: #acacac;
   max-width: 5ch;
   font-size: 11.9rem;
 }
@@ -97,7 +97,7 @@
 
 .formacao-extra h3 {
   font-size: 0.875rem;
-  line-height: 1.4 ;
+  line-height: 1.4;
   color: #848385;
   text-transform: uppercase;
   margin-bottom: 30px;
@@ -115,11 +115,11 @@
 }
 
 .linguagens-frameworks h3::before {
-    background: url("../medias/icon-code.svg") no-repeat center center;
+  background: url("../medias/icon-code.svg") no-repeat center center;
 }
 
 .idiomas h3:before {
-    background: url("../medias/icon-idiomas.svg") no-repeat center center;
+  background: url("../medias/icon-idiomas.svg") no-repeat center center;
 }
 
 .formacao-extra li {
@@ -147,12 +147,15 @@
     padding: 60px 20px;
     gap: 40px;
   }
+
   .formacao .subtitulo {
     color: #ffffff;
   }
+
   .formacao-texto {
     font-size: 1.125rem;
   }
+
   .formacao-extra h3::before {
     position: initial;
     margin-bottom: 10px;
